--- a/BeerMe/src/app/buscador/buscador.component.html
+++ b/BeerMe/src/app/buscador/buscador.component.html
@@ -1,11 +1,8 @@
-<app-head></app-head>
-
-<div class="container">
-
-    <div class="containerone">
-        <input type="placeholder">
-    </div>
-
-    <div class="containertwo"></div>
-
+<div class="buscador">
+    <form id="content">
+        <input type="text" name="input" class="input" id="search-input">
+        <button type="reset" class="search" id="search-btn"></button>
+    </form>
 </div>
+
+<router-outlet></router-outlet>
