--- a/BeerMe/src/app/home/home.component.html
+++ b/BeerMe/src/app/home/home.component.html
@@ -1,14 +1,8 @@
-<div class="input-group flex-nowrap">
-    <div class="input-group-prepend">
-        <span class="input-group-text" id="addon-wrapping">BEER</span>
-    </div>
-    <input type="text" class="form-control" placeholder="Username" aria-label="Username"
-        aria-describedby="addon-wrapping">
-</div>
-
-<div class="input-group input-group-lg">
-    <div class="input-group-prepend">
-        <span class="input-group-text" id="inputGroup-sizing-lg">Large</span>
-    </div>
-    <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
+<div class="presentacion">
+    <!-- <div class="malta"> -->
+    <!-- <img src="../../assets/images/maltaMinimal.jpg" alt="ramo de malta de trigo"> -->
+    <h1>Hi brewers!</h1>
+    <p>Discover a world of beers that's now at your fingertips!</p>
+    <button class="btn-12 text-white" (click)="onClick('/buscador')"><span>Search</span><span>Click!</span></button>
+    <!-- </div> -->
 </div>
