--- a/BeerMe/src/app/footer/footer.component.css
+++ b/BeerMe/src/app/footer/footer.component.css
@@ -1,3 +1,27 @@
-.container{
-background-color: #dda70e;
+
+.container-fluid{
+bottom: 0;
+width: 100%;
+color:#fbf305;
+
+}
+
+footer{
+    background-color: black;
+}
+
+svg{
+    width: 1.5%;
+    height:auto;
+}
+
+.powered{
+    margin-left:76.000em;
+    margin-top:-10px;
+    
+
+}
+
+.diamante{
+    padding: 0.125em;
 }
