--- a/BeerMe/src/app/footer/footer.component.html
+++ b/BeerMe/src/app/footer/footer.component.html
@@ -1,10 +1,27 @@
-<div class="container">
-    <ul class="izquierda">
-        <p class="display-none">Welcome to BeerMe, the new app where you can find your favotire beer</p><i
-            class="fa fa-bolt"></i>
-        <li class="d-inline-block btn-lg pb-5 pt-5"><i class="fa fa-smile-o"></i>2020</li>
-    </ul>
-    <ul class="derecha">
-        <li class="d-inline-block btn-lg pb-5 pt-5"><i class="fa fa-globe"></i>Worldwide</li>
-    </ul>
-</div>
+<footer>
+    <div class="container-fluid">
+        <!-- <p>BeerMe: The new app of beers that is yours discover. Explore the world of beer through our incredible
+            Search&Map</p> -->
+        <div class="diamante">
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-gem" fill="currentColor"
+                xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd"
+                    d="M3.1.7a.5.5 0 0 1 .4-.2h9a.5.5 0 0 1 .4.2l2.976 3.974c.149.185.156.45.01.644L8.4 15.3a.5.5 0 0 1-.8 0L.1 5.3a.5.5 0 0 1 0-.6l3-4zm11.386 3.785l-1.806-2.41-.776 2.413 2.582-.003zm-3.633.004l.961-2.989H4.186l.963 2.995 5.704-.006zM5.47 5.495l5.062-.005L8 13.366 5.47 5.495zm-1.371-.999l-.78-2.422-1.818 2.425 2.598-.003zM1.499 5.5l2.92-.003 2.193 6.82L1.5 5.5zm7.889 6.817l2.194-6.828 2.929-.003-5.123 6.831z" />
+            </svg> 2020
+        </div>
+        <div class="corazon">
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-suit-heart-fill" fill="currentColor"
+                xmlns="http://www.w3.org/2000/svg">
+                <path
+                    d="M4 1c2.21 0 4 1.755 4 3.92C8 2.755 9.79 1 12 1s4 1.755 4 3.92c0 3.263-3.234 4.414-7.608 9.608a.513.513 0 0 1-.784 0C3.234 9.334 0 8.183 0 4.92 0 2.755 1.79 1 4 1z" />
+            </svg> Worldwide
+        </div>
+        <div class="powered">
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-dot" fill="currentColor"
+                xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
+            </svg> By Lenas47
+        </div>
+
+    </div>
+</footer>
