--- a/BeerMe/src/app/head/head.component.html
+++ b/BeerMe/src/app/head/head.component.html
@@ -9,23 +9,23 @@
 
 <body>
 
-    <nav class="navbar navbar-">
-        <a class="navbar-brand" href="#"><img src="./images/logo_blanco.png" alt="Beer Me"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <nav class="navbar navbar-light bg-white navbar-expand-md">
+
+        <a class="navbar-brand-left" href="#"><img src="assets/images/bmprueba3.png" alt="Beer Me"></a>
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
+            aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <ul class="nav ml-auto">
-            <li class="nav-item">
-                <a class="nav-link text-white active lead" href="#">Cerveceame</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-white lead" href="#">Mapa</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-white lead" href="#">Login</a>
-            </li>
-        </ul>
+
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+            <ul class="navbar-nav menu">
+                <li><a class="nav-item nav-link buscador" [routerLink] (click)="onClick('/buscador')">Buscador</a></li>
+                <li><a class="nav-item nav-link text-bold" [routerLink] (click)="onClick('/mapa')">Mapa</a></li>
+                <li><a class="nav-item nav-link text-bold" [routerLink] (click)="onClick('/login')">Login/SingUp</a>
+                </li>
+            </ul>
+        </div>
     </nav>
 
 </body>
