Primera maquetación, no responsive

--- a/BeerMe/src/app/home/home.component.html
+++ b/BeerMe/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="presentacion">
     <!-- <div class="malta"> -->
     <!-- <img src="../../assets/images/maltaMinimal.jpg" alt="ramo de malta de trigo"> -->
-    <h1>Hi brewers!</h1>
+    <h1 class="saludo">Hi brewers!</h1>
     <p>Discover a world of beers that's now at your fingertips!</p>
     <button class="btn-12 text-white" (click)="onClick('/buscador')"><span>Search</span><span>Click!</span></button>
     <!-- </div> -->
