--- a/BeerMe/src/app/buscador/buscador.component.css
+++ b/BeerMe/src/app/buscador/buscador.component.css
@@ -1,113 +1,180 @@
+* {
+  box-sizing: border-box;
+ 
+}
 
 
-/* body {
-    background-color: #ff9800;
-    color: #fff;
-    margin: 0;
-  } */
+.titulonombre h1{
+  display:absolute;
+  color: #fbf305;
+  font-size: 60px;
+  margin-left: 300px;
+  margin-top: 100px;
   
-  #content {
-    position: absolute;
-    height: 50px;
-    width: 300px;
-    margin-left: 170px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
+}
+.cuadrado{
+  /* position: absolute; */
+  width: 600px;
+  height: 400px;
+  border-radius: 10%;
+  margin-top: 20px;
+ 
+  background-image: url("../../assets/images/maltaArtificial.png");
+  background-repeat: no-repeat;
+}
+
+.buscadornombre{
+ 
+  margin-left: 700px;
   
-  #content.on {
-    
-    animation-name: in-out;
-    animation-duration: 0.7s;
-    animation-timing-function: linear;
-    animation-iteration-count: 1;
-  }
+}
+
+.titulovariables h1{
+  display: absolute;
+  color:black;
+  font-size: 60px;
+  margin-left:20px;
+
+}
+
+
+.cuadradodos{
+
+  width: 600px;
+  height: 400px;
+  border-radius: 10%;
+  margin-left: 600px;
+  display: flex;
+  background-image: url("../../assets/images/botellasVacias.jpg");
+  background-repeat: no-repeat;
+  padding: 10px;
+  margin-bottom: 20px;
+
+}
+
+.buscadoravanzado{
+  display: absolute;
+  margin-left: 100px;
+  margin-top: 100px;
   
-  input {
-    box-sizing: border-box;
-    width: 50px;
-    height: 50px;
-    border: 4px solid #ffffff;
-    border-radius: 50%;
-    background: none;
-    color: #fff;
-    font-size: 16px;
-    font-weight: 400;
-    font-family: Roboto;
-    outline: 0;
-    transition: width 0.4s ease-in-out, border-radius 0.8s ease-in-out,
-      padding 0.2s;
-    transform: translate(-100%, -50%);
-  }
   
-  .search {
-    background: none;
-    position: absolute;
-    top: 0px;
-    left: 0;
-    height: 50px;
-    width: 50px;
-    padding: 0;
-    border-radius: 100%;
-    outline: 0;
-    border: 0;
-    color: inherit;
-    cursor: pointer;
-    transform: translate(-100%, -50%);
-  }
-  
-  .search:before {
-    content: "";
-    position: absolute;
-    width: 20px;
-    height: 4px;
-    background-color: #fff;
-    transform: rotate(45deg);
-    margin-top: 26px;
-    margin-left: 17px;
-    transition: 0.2s ease-in-out;
-  }
-  
-  .close {
-    transition: 0.4s ease-in-out;
-  }
-  
-  .close:before {
-    content: "";
-    position: absolute;
-    width: 27px;
-    height: 4px;
-    margin-top: -1px;
-    margin-left: -13px;
-    background-color: #fff;
-    transition: 0.2s ease-in-out;
-  }
-  
-  .close:after {
-    content: "";
-    position: absolute;
-    width: 27px;
-    height: 4px;
-    background-color: #fff;
-    margin-top: -1px;
-    margin-left: -13px;
-    cursor: pointer;
-    transform: rotate(-45deg);
-  }
-  
-  .square {
-    box-sizing: border-box;
-    padding: 0 40px 0 10px;
-    width: 300px;
-    height: 50px;
-    border: 4px solid #ffffff;
-    border-radius: 0;
-    background: none;
-    color: #fff;
-    font-family: Roboto;
-    font-size: 16px;
-    font-weight: 400;
-    outline: 0;
-    transform: translate(-100%, -50%);
-  }
+}
+ .buscadoravanzado button {
+  color:#fbf305;
+ }
+
+
+
+#content {
+  position: absolute;
+  height: 50px;
+  width: 300px;
+  margin-left: 120px;
+  top: 80%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#content.on {
+   animation-name: in-out;
+   animation-duration: 0.7s;
+  animation-timing-function: linear;
+   animation-iteration-count: 1;
+}
+
+input {
+  box-sizing: border-box;
+  width: 50px;
+  height: 50px;
+  border: 4px solid #ffffff;
+  border-radius: 50%;
+  background: none;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 400;
+  font-family: Roboto;
+  outline: 0;
+  transition: width 0.4s ease-in-out, border-radius 0.8s ease-in-out,
+    padding 0.2s;
+  transition-delay: 0.4s;
+  transform: translate(-100%, -50%);
+}
+
+.search {
+  background: none;
+  position: absolute;
+  top: 0px;
+  left: 0;
+  height: 50px;
+  width: 50px;
+  padding: 0;
+  border-radius: 100%;
+  outline: 0;
+  border: 0;
+  color: inherit;
+  cursor: pointer;
+  transition: 0.2s ease-in-out;
+ transform: translate(-100%, -50%);
+}
+
+.search:before {
+  content: "";
+  position: absolute;
+  width: 20px;
+  height: 4px;
+  background-color: #fff;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+  margin-top: 26px;
+  margin-left: 17px;
+  transition: 0.2s ease-in-out;
+}
+
+.close {
+  transition: 0.4s ease-in-out;
+  transition-delay: 0.4s;
+}
+
+.close:before {
+  content: "";
+  position: absolute;
+  width: 27px;
+  height: 4px;
+  margin-top: -1px;
+  margin-left: -13px;
+  background-color: #fff;
+  transform: rotate(45deg);
+  transition: 0.2s ease-in-out;
+}
+
+.close:after {
+  content: "";
+  position: absolute;
+  width: 27px;
+  height: 4px;
+  background-color: #fff;
+  margin-top: -1px;
+  margin-left: -13px;
+  cursor: pointer;
+  transform: rotate(-45deg);
+}
+
+.square {
+  box-sizing: border-box;
+  padding: 0 40px 0 10px;
+  width: 300px;
+  height: 50px;
+  border: 4px solid #ffffff;
+  border-radius: 0;
+  background: none;
+  color: #fff;
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 400;
+  outline: 0;
+  transition: width 0.4s ease-in-out, border-radius 0.4s ease-in-out,
+    padding 0.2s;
+  transition-delay: 0.4s, 0s, 0.4s;
+  transform: translate(-100%, -50%);
+}
