--- a/BeerMe/src/app/buscador/buscador.component.html
+++ b/BeerMe/src/app/buscador/buscador.component.html
@@ -1,8 +1,39 @@
-<div class="buscador">
-    <form id="content">
-        <input type="text" name="input" class="input" id="search-input">
-        <button type="reset" class="search" id="search-btn"></button>
-    </form>
-</div>
+<div class="container">
 
-<router-outlet></router-outlet>
+    <div class="row">
+        <div class="col-sm-md-12">
+            <div class="cuadrado">
+                <div class="titulonombre">
+                    <h1>Por Nombre</h1>
+                </div>
+                <div class="buscadornombre">
+                    <!-- <input class="nombre" type="text" placeholder="search">
+                    <button type="submit" class="btn btn-search fa fa-search"></button> -->
+                    <form id="content">
+                        <input type="text" name="input" class="input" id="search-input">
+                        <button type="reset" class="search" id="search-btn"></button>
+                    </form>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <!-- línea dínamica efecto espuma -->
+    <br>
+    <div class="row">
+
+        <div class="col-sm-md-12">
+            <div class="cuadradodos">
+                <div class="titulovariables">
+                    <h1>Por Variables</h1>
+                </div>
+
+                <div class="buscadoravanzado">
+                    <input class="variable" type="text" placeholder="search">
+                    <button type="submit" class="btn btn-search fa fa-search"></button>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
