--- a/BeerMe/src/app/buscador/buscador.component.css
+++ b/BeerMe/src/app/buscador/buscador.component.css
@@ -6,9 +6,9 @@
 
 .titulonombre h1{
   display:absolute;
-  color: #fbf305;
+  color:white;
   font-size: 60px;
-  margin-left: 300px;
+  margin-left: 10%;
   margin-top: 100px;
   
 }
@@ -70,7 +70,7 @@
   height: 50px;
   width: 300px;
   margin-left: 120px;
-  top: 80%;
+  top: 65%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
