--- a/BeerMe/src/app/buscador/buscador.component.html
+++ b/BeerMe/src/app/buscador/buscador.component.html
@@ -29,8 +29,10 @@
                 </div>
 
                 <div class="buscadoravanzado">
-                    <input class="variable" type="text" placeholder="search">
-                    <button type="submit" class="btn btn-search fa fa-search"></button>
+                    <form id="content">
+                        <input type="text" name="input" class="input" id="search-input">
+                        <button type="reset" class="search" id="search-btn"></button>
+                    </form>
                 </div>
 
             </div>
