--- a/BeerMe/src/app/components/buscador/buscador.component.css
+++ b/BeerMe/src/app/components/buscador/buscador.component.css
@@ -1,25 +1,41 @@
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding:0;
+  background-color: #e6cfad;
+  
  
 }
 
-
-.titulonombre h1{
-  display:absolute;
-  color:white;
-  font-size: 60px;
-  margin-left: 10%;
-  margin-top: 100px;
-  
+label{
+  font-family: var(--fontFirst);
+  font-weight: bold;
+  color: var(--colorClaro);
+  margin-left: 6.250em;
+  padding-top:0.250em;
 }
-.cuadrado{
-  /* position: absolute; */
-  width: 600px;
+input{
+  display:flex;
+  margin-top: 1.125em;
+  padding: 0.425em;
+  margin-left: 2.125em;
+  border-radius: 10%;
+  height:4.250em ;
+  border-color: white, solid, 3px;
+}
+
+btnBuscar{
+  width: 20px;
+  height: auto;
+}
+
+
+  /* width: 600px;
   height: 400px;
   border-radius: 10%;
   margin-top: 20px;
  
-  background-image: url("../../assets/images/maltaArtificial.png");
+  background-image: url("../../../assets/images/maltaArtificial.png");
   background-repeat: no-repeat;
 }
 
@@ -31,7 +47,7 @@
 
 .titulovariables h1{
   display: absolute;
-  color:black;
+  color:#a96b18;
   font-size: 60px;
   margin-left:20px;
 
@@ -39,13 +55,22 @@
 
 
 .cuadradodos{
-
+.titulonombre h1{
+  display:absolute;
+  color:white;
+  font-size: 60px;
+  margin-left: 10%;
+  margin-top: 100px;
+  
+}
+.cuadrado{ */
+  /* position: absolute;
   width: 600px;
   height: 400px;
   border-radius: 10%;
   margin-left: 600px;
   display: flex;
-  background-image: url("../../assets/images/botellasVacias.jpg");
+  background-color: yellowgreen;
   background-repeat: no-repeat;
   padding: 10px;
   margin-bottom: 20px;
@@ -177,4 +202,4 @@ input {
     padding 0.2s;
   transition-delay: 0.4s, 0s, 0.4s;
   transform: translate(-100%, -50%);
-}
+} */
