--- a/BeerMe/src/app/components/head/head.component.html
+++ b/BeerMe/src/app/components/head/head.component.html
@@ -10,13 +10,14 @@
 <body>
 
     <nav class="navbar bg-light navbar-light navbar-expand-lg">
-        <a class="navbar" id="icono" href="#"><img src="../../../assets/images/logo_icono_beerme_color_sm_1.png"
-                alt="Icono logo Beer Me"></a>
+        <a class="navbar" id="icono" href="#"><img src="../../../assets/images/logo_icono_beerme_color.svg"
+                width="100px" height="100px" alt="Icono logo Beer Me"></a>
         <a class="navbar d-none  d-md-block" id="type" href="#"><img
-                src="../../../assets/images/logo_type_beerme_color_sm.png" alt="Letras de Beer Me"></a>
-        <button class="navbar-toggler" data-target="#navbarNav" data-toggle="collapse" type="button"></button>
+                src="../../../assets/images/logo_type_beerme_color.svg" width="100px" height="100px"
+                alt="Letras de Beer Me"></a>
+        <!-- <button class="navbar-toggler" data-target="#navbarNav" data-toggle="collapse" type="button"></button> -->
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        <button class="navbar-toggler" id="menu" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
