--- a/BeerMe/src/app/components/home/home.component.html
+++ b/BeerMe/src/app/components/home/home.component.html
@@ -2,7 +2,8 @@
     <div class="container-fluid">
         <h1 class="saludo">Hi brewers!</h1>
         <p>Discover a world of beers that's now at your fingertips!</p>
+        <!-- <p>Only click on start and descovery de magic!</p> -->
     </div>
-    <button class="buscar" (click)="onClick('/buscador')"><span>Click!</span></button>
+    <button class="buscar" (click)="onClick('/buscador')"><span>Start!</span></button>
     <!-- </div> -->
 </div>
