--- a/BeerMe/src/app/components/buscador/buscador.component.css
+++ b/BeerMe/src/app/components/buscador/buscador.component.css
@@ -12,8 +12,9 @@ label{
   font-weight: bold;
   color: var(--colorClaro);
   margin-left: 6.250em;
-  padding-top:0.250em;
+  padding-top:0.750em;
 }
+
 input{
   display:flex;
   margin-top: 1.125em;
@@ -21,185 +22,34 @@ input{
   margin-left: 2.125em;
   border-radius: 10%;
   height:4.250em ;
-  border-color: white, solid, 3px;
-}
-
-btnBuscar{
-  width: 20px;
-  height: auto;
+  border-color: var(--colorBeige), 3px;
+  border-style: dotted;
 }
 
 
-  /* width: 600px;
-  height: 400px;
-  border-radius: 10%;
-  margin-top: 20px;
- 
-  background-image: url("../../../assets/images/maltaArtificial.png");
-  background-repeat: no-repeat;
-}
-
-.buscadornombre{
- 
-  margin-left: 700px;
-  
-}
-
-.titulovariables h1{
-  display: absolute;
-  color:#a96b18;
-  font-size: 60px;
-  margin-left:20px;
-
-}
-
-
-.cuadradodos{
-.titulonombre h1{
-  display:absolute;
+.btn-dark{
+  background-color: var(--colorMarron);
   color:white;
-  font-size: 60px;
-  margin-left: 10%;
-  margin-top: 100px;
+  font-family: var(--fontSecond);
+  font-weight: lighter;
+  border-radius: 20px;
+  border-color: black 1px !important;
+  padding: 0.236em;
+  margin-top:0.525em;
+  margin-left: 2.125em;
   
 }
-.cuadrado{ */
-  /* position: absolute;
-  width: 600px;
-  height: 400px;
-  border-radius: 10%;
-  margin-left: 600px;
-  display: flex;
-  background-color: yellowgreen;
-  background-repeat: no-repeat;
-  padding: 10px;
-  margin-bottom: 20px;
 
-}
-
-.buscadoravanzado{
-  display: absolute;
-  margin-left: 100px;
-  margin-top: 100px;
-  
-  
-}
- .buscadoravanzado button {
-  color:#fbf305;
- }
-
-
-
-#content {
-  position: absolute;
-  height: 50px;
-  width: 300px;
-  margin-left: 120px;
-  top: 65%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-#content.on {
-   animation-name: in-out;
-   animation-duration: 0.7s;
-  animation-timing-function: linear;
-   animation-iteration-count: 1;
-}
-
-input {
-  box-sizing: border-box;
-  width: 50px;
-  height: 50px;
-  border: 4px solid #ffffff;
-  border-radius: 50%;
-  background: none;
-  color: #fff;
-  font-size: 16px;
-  font-weight: 400;
-  font-family: Roboto;
-  outline: 0;
-  transition: width 0.4s ease-in-out, border-radius 0.8s ease-in-out,
-    padding 0.2s;
-  transition-delay: 0.4s;
-  transform: translate(-100%, -50%);
-}
-
-.search {
-  background: none;
-  position: absolute;
-  top: 0px;
-  left: 0;
-  height: 50px;
-  width: 50px;
-  padding: 0;
-  border-radius: 100%;
-  outline: 0;
-  border: 0;
-  color: inherit;
-  cursor: pointer;
-  transition: 0.2s ease-in-out;
- transform: translate(-100%, -50%);
-}
-
-.search:before {
-  content: "";
-  position: absolute;
-  width: 20px;
-  height: 4px;
-  background-color: #fff;
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
-  margin-top: 26px;
-  margin-left: 17px;
-  transition: 0.2s ease-in-out;
-}
-
-.close {
-  transition: 0.4s ease-in-out;
-  transition-delay: 0.4s;
-}
-
-.close:before {
-  content: "";
-  position: absolute;
-  width: 27px;
-  height: 4px;
-  margin-top: -1px;
-  margin-left: -13px;
-  background-color: #fff;
-  transform: rotate(45deg);
-  transition: 0.2s ease-in-out;
-}
-
-.close:after {
-  content: "";
-  position: absolute;
-  width: 27px;
-  height: 4px;
-  background-color: #fff;
-  margin-top: -1px;
-  margin-left: -13px;
-  cursor: pointer;
-  transform: rotate(-45deg);
-}
-
-.square {
-  box-sizing: border-box;
-  padding: 0 40px 0 10px;
-  width: 300px;
-  height: 50px;
-  border: 4px solid #ffffff;
-  border-radius: 0;
-  background: none;
-  color: #fff;
-  font-family: Roboto;
-  font-size: 16px;
-  font-weight: 400;
-  outline: 0;
-  transition: width 0.4s ease-in-out, border-radius 0.4s ease-in-out,
-    padding 0.2s;
-  transition-delay: 0.4s, 0s, 0.4s;
-  transform: translate(-100%, -50%);
+/* .dch{
+  display:absolute;
+  margin-left: 15.125em;
+  margin-top: 1.125em;
 } */
+
+/* .bi{
+display:absolute;
+z-index:3;
+margin-left: 10.236em;
+margin-bottom: 3.125em;
+} */
+
