--- a/BeerMe/src/app/components/head/head.component.html
+++ b/BeerMe/src/app/components/head/head.component.html
@@ -25,8 +25,8 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li><a class="nav-item nav-link" [routerLink] (click)="onClick('/buscador')">Buscador</a></li>
-                <li><a class="nav-item nav-link" [routerLink] (click)="onClick('/mapa')">Mapa</a></li>
-                <li><a class="nav-item nav-link" [routerLink] (click)="onClick('/login')">Login/SingUp</a></li>
+                <li><a class="nav-item nav-link" [routerLink] (click)="onClick('/usuarios/registro')">SignUp</a></li>
+                <li><a class="nav-item nav-link" [routerLink] (click)="onClick('/usuarios/login')">Login</a></li>
             </ul>
         </div>
 
