--- a/BeerMe/src/app/components/usuarios/login/login.component.html
+++ b/BeerMe/src/app/components/usuarios/login/login.component.html
@@ -1,1 +1,19 @@
 <p>login works!</p>
+
+<div id="loginUsuarios">
+    <div class="login-box">
+        <h2>Login</h2>
+        <form [formGroup]="loginUsuarios" (ngSubmit)="onSubmit()">
+            <div class="user-box">
+                <input type="text" name="" required="">
+                <label>Email</label>
+            </div>
+            <div class="user-box">
+                <input type="password" name="" required="">
+                <label>Password</label>
+            </div>
+            <button class="btn btn-light text-white">Acceder</button>
+
+        </form>
+    </div>
+</div>
