--- a/BeerMe/src/app/components/usuarios/registro-usuarios/registro-usuarios.component.css
+++ b/BeerMe/src/app/components/usuarios/registro-usuarios/registro-usuarios.component.css
@@ -38,7 +38,7 @@ label{
     padding: 40px;
     transform: translate(-50%, -50%);
     background-image: url("../../../../assets/images/malta_corte.jpg");
-    background-color:rgba(0,0,0,0.9) ;
+    background:rgba(0,0,0,0.5) ;
     box-sizing: border-box;
     box-shadow: 0 15px 25px var(--colorClaro);
     border-radius: 10px;
