--- a/BeerMe/src/app/components/usuarios/vista-usuario/vista-usuario.component.html
+++ b/BeerMe/src/app/components/usuarios/vista-usuario/vista-usuario.component.html
@@ -1,1 +1,16 @@
 <p>vista-usuario works!</p>
+
+
+<div class="row">
+
+    <div class="card bg-dark text-white">
+        <img src="../../../../assets/images/fin_botella.jpg" class="card-img" alt="...">
+        <div class="card-img-overlay">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                additional content. This content is a little bit longer.</p>
+            <p class="card-text">Last updated 3 mins ago</p>
+        </div>
+    </div>
+
+</div>
