--- a/BeerMe/src/app/components/vista-buscador/vista-buscador.component.css
+++ b/BeerMe/src/app/components/vista-buscador/vista-buscador.component.css
@@ -8,3 +8,13 @@
     background-color: var(--colorClaro);
 }
 
+.card-img{
+
+    width: 20vw;
+    height: auto;
+    padding: 10px;
+    margin-left: 150px;
+    border-radius: 10px;
+
+}
+
