--- a/BeerMe/src/app/components/home/home.component.html
+++ b/BeerMe/src/app/components/home/home.component.html
@@ -1,9 +1,19 @@
-<div class="container">
-    <div class="container-fluid">
-        <h1 class="saludo">Hi brewers!</h1>
-        <p>Discover a world of beers that's now at your fingertips!</p>
-        <!-- <p>Only click on start and descovery de magic!</p> -->
+<div class="container-fluid">
+    <div class="row">
+        <div class="col">
+            <h1 class="saludo">Hi brewers!</h1>
+            <p>Discover a world of beers that's now at your fingertips!</p>
+        </div>
     </div>
-    <button class="buscar" (click)="onClick('/buscador')"><span>Start!</span></button>
-    <!-- </div> -->
+    <div class="row">
+        <div class="col">
+            <button class="buscar" (click)="onClick('/buscador')"><span>Start!</span></button>
+        </div>
+    </div>
+
+    <!-- <h1 class="saludo">Hi brewers!</h1>
+    <p>Discover a world of beers that's now at your fingertips!</p>
+    <button class="buscar" (click)="onClick('/buscador')"><span>Start!</span></button> -->
+
+
 </div>
