--- a/BeerMe/src/app/components/home/home.component.css
+++ b/BeerMe/src/app/components/home/home.component.css
@@ -3,7 +3,7 @@
   /* margin: 0;
   padding: 0; */
 }
-.container{
+/* .container{
   display: flex;
   width: 100%;
   height: 100vh;
@@ -13,44 +13,67 @@
   text-align: center;
   padding: 0px;
  
+} */
 
-}
 .container-fluid{
-color:black;
+color:var(--colorMarron);
 font-family: var(--fontOdd);
+ 
+
+
+
+justify-content: center;
+align-items: center;
+/* display: flex; */
+width: 100%;
+height: 100vh;
+background-image: url('/assets/images/maltaMinimalUp.jpg');
+background-repeat: no-repeat;
+background-size: cover;
+text-align: center;
+padding: 0px;
 
 }
 .container-fluid h1{
-  margin-top: 1.125em;
-  margin-left: 0.852em;
+  /* margin-top: 1.125em;
+  margin-left: 0.852em; */
+  font-size: 5em;
 
 }
 .container-fluid p{
-  margin-left: 4.125em;
-  font-weight: bold;
+  /* margin-left: 4.125em; */
+  /* font-weight: bold; */
+  font-size: 1.7em;
 }
 
+.row{
+  padding: 1.125em;
+}
 
 .buscar{
-position: absolute;
+  /* display: inline-flex; */
+/* position: absolute;
 margin-top:13.250em;
-margin-left:12.125em;
-color: var(--colorBeige);
-background-color: var(--colorClaro);
+margin-left:12.125em; */
+font-family: var(--fontOdd);
+font-size: 1.125em;
+color:var(--colorMarron);
+background-color: var(--colorBeige);
 /* background-image: url("../../../assets/images/cerveza_grifo.png");
 background-repeat: no-repeat;
 object-fit: cover; */
 /* background-size: cover; */
 /* background-position: center; */
-display: inline-block;
+/* display: inline-block; */
 border: none;
-padding: 20px;
+/* padding: 20px; */
 width:15.125em;
 border-radius: 30px;
 height: 3.125em;
 transition: all 0.5s;
 cursor: pointer;
 }
+
 .buscar:hover
 {
 width: 20.125em; 
