--- a/BeerMe/src/app/components/usuarios/login/login.component.css
+++ b/BeerMe/src/app/components/usuarios/login/login.component.css
@@ -66,3 +66,9 @@
       margin-left: 7.125em;
       background-color: var(--colorClaro);
   }
+
+  #loginUsuarios{
+    display: flex;
+    justify-content:center;
+    background-color: #e9ded7;
+  }
