--- a/BeerMe/src/app/components/usuarios/registro-cerveza/registro-cerveza.component.html
+++ b/BeerMe/src/app/components/usuarios/registro-cerveza/registro-cerveza.component.html
@@ -1,1 +1,47 @@
 <p>registro-cerveza works!</p>
+
+
+<div id="registroCerveza">
+    <div class="login-box">
+        <h2>Registro Cerveza</h2>
+        <form [formGroup]="formularioCerveza" (ngSubmit)="onSubmit()">
+            <div class="user-box">
+                <input type="text" name="" required="" formControlName="nombre">
+                <label>Name</label>
+
+            </div>
+
+            <div class="user-box">
+                <input type="text" name="" required="" formControlName="cervecera">
+                <label>Company</label>
+
+            </div>
+            <div class="user-box">
+                <input type="text" name="" required="" formControlName="pais">
+                <label>Country</label>
+
+            </div>
+
+            <div class="user-box">
+                <input type="text" name="Date of Birth" required="" formControlName="tipo">
+                <label>Type</label>
+
+
+            </div>
+
+            <div class="user-box">
+                <input type="number" name="" required="" formControlName="alcohol">
+                <label>Alcohol</label>
+
+            </div>
+
+            <div class="user-box">
+                <input type="text" name="" required="" formControlName="descripcion">
+                <label>Description</label>
+
+            </div>
+            <button class="btn btn-light text-white">Enviar</button>
+
+        </form>
+    </div>
+</div>
