--- a/BeerMe/src/app/components/usuarios/registro-cerveza/registro-cerveza.component.html
+++ b/BeerMe/src/app/components/usuarios/registro-cerveza/registro-cerveza.component.html
@@ -1,6 +1,3 @@
-<p>registro-cerveza works!</p>
-
-
 <div id="registroCerveza">
     <div class="login-box">
         <h2>Registro Cerveza</h2>
@@ -30,7 +27,7 @@
             </div>
 
             <div class="user-box">
-                <input type="number" name="" required="" formControlName="alcohol">
+                <input type="number" name="" required="" formControlName="graduacion_alcohol">
                 <label>Alcohol</label>
 
             </div>
