--- a/BeerMe/src/app/components/head/head.component.html
+++ b/BeerMe/src/app/components/head/head.component.html
@@ -27,6 +27,7 @@
                 <li><a class="nav-item nav-link" [routerLink] (click)="onClick('/buscador')">Buscador</a></li>
                 <li><a class="nav-item nav-link" [routerLink] (click)="onClick('/usuarios/registro')">SignUp</a></li>
                 <li><a class="nav-item nav-link" [routerLink] (click)="onClick('/usuarios/login')">Login</a></li>
+                <li><a class="nav-item nav-link" [routerLink] (click)="onClick('/perfil')">Perfil</a></li>
             </ul>
         </div>
 
