enlace de perfil funciona

--- a/BeerMe/src/app/components/usuarios/vista-usuario/vista-usuario.component.html
+++ b/BeerMe/src/app/components/usuarios/vista-usuario/vista-usuario.component.html
@@ -2,20 +2,20 @@
     <div class="perfil">
         <div class="row">
             <div class="col-12 col-lg-8">
-                <a href=""><img [routerLink] (click)="onClick('/registroCerveza')"
-                        src="../../../../assets/images/fabrica_cerveza.jpg" class="card-img" alt="..."></a>
-                <!-- <div class="card-img-overlay"> -->
-                <h1>Registra tu
-                    Cerveza</h1>
+                <img src="../../../../assets/images/fabrica_cerveza.jpg" class="card-img" alt="...">
+
+
+
+                <a href="" [routerLink] (click)="onClick('/registroCerveza')">
+                    <h1>Registra tu Cerveza</h1>
+                </a>
                 <p class="card-text">Queremos hacer grande esta comunidad de cerveceros, con un simple registro
                     conseguiremos llegar a las 2000 cervezas.</p>
 
-                <!-- <div class="card bg-dark text-white"> -->
-
-                <!-- </div> -->
             </div>
         </div>
     </div>
+
 
     <div class="beerlist">
         <div class="row">
